--- a/css/coderdojoka.css
+++ b/css/coderdojoka.css
@@ -8,9 +8,7 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    color: #fff;
-    background-color: #111;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 html {
@@ -492,7 +490,7 @@ body {
 }
 
 .timeline-item a {
-  color: #fff;
+  color: #000;
   border-bottom: 1px dashed #42dca3;
 }
 
