--- a/css/coderdojoka.css
+++ b/css/coderdojoka.css
@@ -8,7 +8,7 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 html {
@@ -24,7 +24,7 @@ h5,
 h6 {
     margin: 0 0 35px;
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
 }
@@ -35,7 +35,7 @@ p {
     line-height: 1.5;
 }
 
-@media(min-width:768px) {
+@media (min-width: 768px) {
     p {
         margin: 0 0 35px;
         font-size: 20px;
@@ -62,9 +62,9 @@ a:focus {
 
 .navbar-custom {
     margin-bottom: 0;
-    border-bottom: 1px solid rgba(255,255,255,.3);
+    border-bottom: 1px solid rgba(255, 255, 255, .3);
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
     background-color: #222;
 }
 
@@ -99,7 +99,7 @@ a:focus {
 
 .navbar-custom .nav li a:hover {
     outline: 0;
-    color: rgba(255,255,255,.8);
+    color: rgba(255, 255, 255, .8);
     background-color: transparent;
 }
 
@@ -114,43 +114,43 @@ a:focus {
 }
 
 .navbar-custom .nav li.active a {
-    background-color: rgba(255,255,255,.3);
+    background-color: rgba(255, 255, 255, .3);
 }
 
 .navbar-custom .nav li.active a:hover {
     color: #fff;
 }
 
-@media(min-width:768px) {
+@media (min-width: 768px) {
     .navbar-custom {
         padding: 15px 0;
         border-bottom: 0;
         letter-spacing: 1px;
-        background: 0 0 rgba(0,0,0,0.4);
-        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        transition: background .5s ease-in-out,padding .5s ease-in-out;
+        background: 0 0 rgba(0, 0, 0, 0.4);
+        -webkit-transition: background .5s ease-in-out, padding .5s ease-in-out;
+        -moz-transition: background .5s ease-in-out, padding .5s ease-in-out;
+        transition: background .5s ease-in-out, padding .5s ease-in-out;
     }
 
     .navbar-custom.top-nav-collapse {
         padding: 0;
-        border-bottom: 1px solid rgba(255,255,255,.3);
+        border-bottom: 1px solid rgba(255, 255, 255, .3);
         background: #222;
     }
-	
-	.navbar-custom a {
+
+    .navbar-custom a {
         color: #fff;
     }
 
-	.navbar-custom .nav li a:hover {
-        color: rgba(255,255,255,.8);
+    .navbar-custom .nav li a:hover {
+        color: rgba(255, 255, 255, .8);
     }
 
-	.navbar-custom .nav li.active a {
-        background-color: rgba(255,255,255,.3);
+    .navbar-custom .nav li.active a {
+        background-color: rgba(255, 255, 255, .3);
     }
-	
-	.navbar-custom .nav li.active a:hover {
+
+    .navbar-custom .nav li.active a:hover {
         color: #fff;
     }
 }
@@ -173,14 +173,14 @@ a:focus {
 .intro .intro-body {
     display: table-cell;
     vertical-align: middle;
-	padding-top: 80px;
+    padding-top: 80px;
 }
 
-.intro .intro-body  h1.brand-heading {
+.intro .intro-body h1.brand-heading {
     font-size: 40px;
 }
 
-.intro .intro-body  h2.brand-heading {
+.intro .intro-body h2.brand-heading {
     font-size: 30px;
 }
 
@@ -188,17 +188,17 @@ a:focus {
     font-size: 18px;
 }
 
-@media(min-width:768px) {
+@media (min-width: 768px) {
     .intro {
         height: 100%;
         padding: 0;
     }
 
-    .intro .intro-body  h1.brand-heading {
+    .intro .intro-body h1.brand-heading {
         font-size: 100px;
     }
 
-    .intro .intro-body  h2.brand-heading {
+    .intro .intro-body h2.brand-heading {
         font-size: 70px;
     }
 
@@ -213,7 +213,7 @@ a:focus {
     margin-top: 15px;
     padding: 7px 16px;
     border: 2px solid #000;
-    border-radius: 100%!important;
+    border-radius: 100% !important;
     font-size: 40px;
     color: #000;
     background: 0 0;
@@ -226,7 +226,7 @@ a:focus {
 .btn-circle:focus {
     outline: 0;
     color: #000;
-    background: rgba(0,0,0,.1);
+    background: rgba(0, 0, 0, .1);
 }
 
 .btn-circle i.animated {
@@ -247,7 +247,7 @@ a:focus {
     -moz-animation-timing-function: linear;
 }
 
-@-webkit-keyframes pulse {    
+@-webkit-keyframes pulse {
     0% {
         -webkit-transform: scale(1);
         transform: scale(1);
@@ -264,7 +264,7 @@ a:focus {
     }
 }
 
-@-moz-keyframes pulse {    
+@-moz-keyframes pulse {
     0% {
         -moz-transform: scale(1);
         transform: scale(1);
@@ -283,7 +283,7 @@ a:focus {
 
 .content-section {
     padding-top: 80px;
-	margin-top: 20px;
+    margin-top: 20px;
 }
 
 #map {
@@ -291,7 +291,7 @@ a:focus {
     height: 200px;
 }
 
-@media(min-width:767px) {
+@media (min-width: 767px) {
     .content-section {
         margin-top: 170px;
     }
@@ -304,7 +304,7 @@ a:focus {
 .btn {
     border-radius: 0;
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 400;
     -webkit-transition: all .3s ease-in-out;
     -moz-transition: all .3s ease-in-out;
@@ -329,13 +329,13 @@ ul.banner-social-buttons {
     margin-top: 0;
 }
 
-@media(max-width:1199px) {
+@media (max-width: 1199px) {
     ul.banner-social-buttons {
         margin-top: 15px;
     }
 }
 
-@media(max-width:767px) {
+@media (max-width: 767px) {
     ul.banner-social-buttons li {
         display: block;
         margin-bottom: 20px;
@@ -358,13 +358,13 @@ footer p {
 ::-moz-selection {
     text-shadow: none;
     background: #fcfcfc;
-    background: rgba(255,255,255,.2);
+    background: rgba(255, 255, 255, .2);
 }
 
 ::selection {
     text-shadow: none;
     background: #fcfcfc;
-    background: rgba(255,255,255,.2);
+    background: rgba(255, 255, 255, .2);
 }
 
 img::selection {
@@ -376,143 +376,159 @@ img::-moz-selection {
 }
 
 body {
-    webkit-tap-highlight-color: rgba(255,255,255,.2);
+    webkit-tap-highlight-color: rgba(255, 255, 255, .2);
 }
-
 
 #timeline {
-  list-style: none;
-  position: relative;
+    list-style: none;
+    position: relative;
 }
+
 #timeline:before {
-  top: 0;
-  bottom: 60px;
-  position: absolute;
-  content: " ";
-  width: 2px;
-  background-color: #42dca3;
-  left: 50%;
-  margin-left: -1.5px;
+    top: 0;
+    bottom: 60px;
+    position: absolute;
+    content: " ";
+    width: 2px;
+    background-color: #42dca3;
+    left: 50%;
+    margin-left: -1.5px;
 }
+
 #timeline .clearFix {
-  clear: both;
-  height: 0;
+    clear: both;
+    height: 0;
 }
+
 #timeline .timeline-badge {
-  color: #fff;
-  width: 50px;
-  height: 50px;
-  font-size: 1.2em;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  text-align: center;
-  position: absolute;
-  top: 20px;
-  left: 50%;
-  margin-left: -25px;
-  background-color: #42dca3;
-  z-index: 100;
-  border-top-right-radius: 50%;
-  border-top-left-radius: 50%;
-  border-bottom-right-radius: 50%;
-  border-bottom-left-radius: 50%;
+    color: #fff;
+    width: 50px;
+    height: 50px;
+    font-size: 1.2em;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-align: center;
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    margin-left: -25px;
+    background-color: #42dca3;
+    z-index: 100;
+    border-top-right-radius: 50%;
+    border-top-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    border-bottom-left-radius: 50%;
 }
+
 #timeline .timeline-badge span.timeline-balloon-date-day {
-  font-size: 1.4em;
+    font-size: 1.4em;
 }
+
 #timeline .timeline-badge span.timeline-balloon-date-month {
-  font-size: .7em;
-  position: relative;
-  top: -10px;
+    font-size: .7em;
+    position: relative;
+    top: -10px;
 }
+
 #timeline .timeline-badge.timeline-filter-movement {
-  background-color: #ffffff;
-  font-size: 1.7em;
-  height: 29px;
-  margin-left: -16px;
-  width: 29px;
-  top: 40px;
+    background-color: #ffffff;
+    font-size: 1.7em;
+    height: 29px;
+    margin-left: -16px;
+    width: 29px;
+    top: 40px;
 }
+
 #timeline .timeline-badge.timeline-filter-movement span {
-  color: #42dca3;
-  font-size: 1.3em;
-  top: -1px;
+    color: #42dca3;
+    font-size: 1.3em;
+    top: -1px;
 }
+
 #timeline .timeline-badge.timeline-future-movement {
-  background-color: #ffffff;
-  height: 35px;
-  width: 35px;
-  font-size: 1.7em;
-  position: relative;
-  margin-left: -18px;
+    background-color: #ffffff;
+    height: 35px;
+    width: 35px;
+    font-size: 1.7em;
+    position: relative;
+    margin-left: -18px;
 }
+
 #timeline .timeline-badge.timeline-future-movement span {
-  color: #42dca3;
-  font-size: .9em;
-  top: 2px;
-  left: 1px;
+    color: #42dca3;
+    font-size: .9em;
+    top: 2px;
+    left: 1px;
 }
+
 #timeline .timeline-movement {
-  border-bottom: dashed 1px #42dca3;
-  position: relative;
-  min-height: 100px;
+    border-bottom: dashed 1px #42dca3;
+    position: relative;
+    min-height: 100px;
 }
+
 #timeline .timeline-movement.timeline-movement-top {
-  height: 60px;
+    height: 60px;
 }
 
 #timeline .timeline-row-future {
-  position: relative;
-  height: 80px;
+    position: relative;
+    height: 80px;
 }
 
 #timeline .timeline-movement .timeline-item {
-  padding: 20px 0;
-  top: 14px;
-  font-size: 1.2em;
+    padding: 20px 0;
+    top: 14px;
+    font-size: 1.2em;
 }
 
 #timeline .timeline-movement .timeline-item .timeline-panel {
-  border: 1px solid #42dca3;
-  border-radius: 3px;
-  background-color: #FFFFFF;
-  color: #666;
-  padding: 10px;
-  position: relative;
-  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
-  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+    border: 1px solid #42dca3;
+    border-radius: 3px;
+    background-color: #FFFFFF;
+    color: #666;
+    padding: 10px;
+    position: relative;
+    -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
 }
+
 #timeline .timeline-movement .timeline-item .timeline-panel .timeline-panel-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
+
 #timeline .timeline-movement .timeline-item .timeline-panel.credits .timeline-panel-ul {
-  text-align: right;
+    text-align: right;
 }
+
 #timeline .timeline-movement .timeline-item .timeline-panel.credits .timeline-panel-ul li {
-  color: #666;
+    color: #666;
 }
+
 #timeline .timeline-movement .timeline-item .timeline-panel.credits .timeline-panel-ul li span.importo {
-  color: #468c1f;
-  font-size: 1.3em;
+    color: #468c1f;
+    font-size: 1.3em;
 }
+
 #timeline .timeline-movement .timeline-item .timeline-panel.debits .timeline-panel-ul {
-  text-align: left;
+    text-align: left;
 }
+
 #timeline .timeline-movement .timeline-item .timeline-panel.debits .timeline-panel-ul span.importo {
-  color: #e2001a;
-  font-size: 1.3em;
+    color: #e2001a;
+    font-size: 1.3em;
 }
 
 #timeline .question {
-  padding-right: 10px;
-  color: #42dca3;
-  font-weight: bold;
+    padding-right: 10px;
+    color: #42dca3;
+    font-weight: bold;
 }
 
 .timeline-item a {
-  color: #000;
-  border-bottom: 1px dashed #42dca3;
+    color: #000;
+    border-bottom: 1px dashed #42dca3;
 }
 
 .timeline-item a:hover,
@@ -521,27 +537,32 @@ body {
     color: #ccc;
 }
 
-@media(max-width:767px) {
-	#timeline:before {
-		left: 35px;
-	}
+@media (max-width: 767px) {
+    #timeline:before {
+        left: 35px;
+    }
 
-	#timeline .timeline-badge {
-		left: 50px;
-	}
-	
-	#timeline .timeline-movement .timeline-item {
-		padding: 20px 0 20px 100px;
-		text-align: left;
-	}
-	
-	#timeline .timeline-movement .timeline-item-first{
-		padding-top: 5px;
-		padding-bottom: 5px;
-	}
-	
-	#timeline .timeline-movement .timeline-item-last{
-		padding-top: 5px;
-		padding-bottom: 20px;
-	}
+    #timeline .timeline-badge {
+        left: 50px;
+    }
+
+    #timeline .timeline-movement .timeline-item {
+        padding: 20px 0 20px 100px;
+        text-align: left;
+    }
+
+    #timeline .timeline-movement .timeline-item-first {
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+
+    #timeline .timeline-movement .timeline-item-last {
+        padding-top: 5px;
+        padding-bottom: 20px;
+    }
+}
+
+.ul_unstyled {
+    list-style: none;
+    padding: 0;
 }
