--- a/css/coderdojoka.css
+++ b/css/coderdojoka.css
@@ -70,10 +70,24 @@ a:focus {
 
 .navbar-custom .navbar-brand {
     font-weight: 700;
+	padding: 15px 5px 15px 15px;
 }
 
 .navbar-custom .navbar-brand:focus {
     outline: 0;
+}
+
+.navbar-breadcrumb{
+	float:left;
+	height:50px;
+	padding:15px 5px;
+	font-size:14px;
+	line-height:20px;
+}
+
+.navbar-breadcrumb-sep{
+	font-size:18px;
+	color: #fff;
 }
 
 .navbar-custom .navbar-toggle {
