--- a/css/coderdojoka.css
+++ b/css/coderdojoka.css
@@ -70,7 +70,7 @@ a:focus {
 
 .navbar-custom .navbar-brand {
     font-weight: 700;
-	padding: 15px 5px 15px 15px;
+    padding: 15px 5px 15px 15px;
 }
 
 .navbar-custom .navbar-brand:focus {
@@ -78,16 +78,16 @@ a:focus {
 }
 
 .navbar-breadcrumb{
-	float:left;
-	height:50px;
-	padding:15px 5px;
-	font-size:14px;
-	line-height:20px;
+    float:left;
+    height:50px;
+    padding:15px 5px;
+    font-size:14px;
+    line-height:20px;
 }
 
 .navbar-breadcrumb-sep{
-	font-size:18px;
-	color: #fff;
+    font-size:18px;
+    color: #fff;
 }
 
 .navbar-custom .navbar-toggle {
@@ -102,6 +102,10 @@ a:focus {
 }
 
 .navbar-custom a {
+    color: #fff;
+}
+
+.navbar-custom .dropdown-menu>li>a {
     color: #fff;
 }
 
@@ -136,12 +140,12 @@ a:focus {
 }
 
 .navbar-custom span#navbar-brand-name{
-	margin-left: 10px;
+    margin-left: 10px;
 }
 
 .navbar-custom span#navbar-brand-name-collapse{
     display: none;
-	margin-left: 10px;
+    margin-left: 10px;
 }
 
 .navbar-custom img.navbar-brand-logo {
@@ -150,24 +154,42 @@ a:focus {
     margin-top: -5px
 }
 
+.navbar-custom .open>a, .navbar-custom .open>a:focus, .navbar-custom .open>a:hover {
+    background-color: #222;
+}
+
 @media (min-width: 768px) {
     .navbar-custom {
-        padding: 15px 0;
+        padding: 0;
         border-bottom: 0;
         letter-spacing: 1px;
         background: 0 0 rgba(0, 0, 0, 0.4);
-        -webkit-transition: background .5s ease-in-out, padding .5s ease-in-out;
-        -moz-transition: background .5s ease-in-out, padding .5s ease-in-out;
-        transition: background .5s ease-in-out, padding .5s ease-in-out;
+        -webkit-transition: background .5s ease-in-out;
+        -moz-transition: background .5s ease-in-out;
+        transition: background .5s ease-in-out;
     }
 
     .navbar-custom.top-nav-collapse {
-        padding: 0;
         border-bottom: 1px solid rgba(255, 255, 255, .3);
         background: #222;
     }
 
+    .navbar-custom ul.dropdown-menu {
+        background: 0 0 rgba(0, 0, 0, 0.4);
+        -webkit-transition: background .5s ease-in-out;
+        -moz-transition: background .5s ease-in-out;
+        transition: background .5s ease-in-out;
+    }
+
+    .navbar-custom.top-nav-collapse ul.dropdown-menu {
+        background-color: #222;
+    }
+
     .navbar-custom a {
+        color: #fff;
+    }
+
+    .navbar-custom .dropdown-menu>li>a {
         color: #fff;
     }
 
@@ -182,10 +204,33 @@ a:focus {
     .navbar-custom .nav li.active a:hover {
         color: #fff;
     }
-	
-	.navbar-custom span#navbar-brand-name-collapse {
+
+    .navbar-custom .open>a, .navbar-custom .open>a:focus, .navbar-custom .open>a:hover {
+        background-color: rgba(0, 0, 0, 0);
+    }
+
+    .navbar-custom .navbar-nav>li, .navbar-custom .navbar-header {
+        padding: 15px 0;
+        -webkit-transition: padding .5s ease-in-out;
+        -moz-transition: padding .5s ease-in-out;
+        transition: padding .5s ease-in-out;
+    }
+
+    .navbar-custom.top-nav-collapse .navbar-nav>li, .navbar-custom.top-nav-collapse .navbar-header {
+        padding: 0;
+    }
+
+    .navbar-custom ul.dropdown-menu {
+        min-width: 0px;
+    }
+
+    .navbar-custom .navbar-right .dropdown-menu {
+        left: 0;
+    }
+
+    .navbar-custom span#navbar-brand-name-collapse {
         display: inline;
-	}
+    }
 }
 
 .intro {
