--- a/css/coderdojoka.css
+++ b/css/coderdojoka.css
@@ -29,6 +29,18 @@ h6 {
     letter-spacing: 1px;
 }
 
+ul {
+    font-size: 16px;
+    line-height: 1.3;
+}
+
+@media (min-width: 768px) {
+    ul {
+        font-size: 18px;
+        line-height: 1.4;
+    }
+}
+
 p {
     margin: 0 0 25px;
     font-size: 18px;
@@ -77,16 +89,16 @@ a:focus {
     outline: 0;
 }
 
-.navbar-breadcrumb{
-    float:left;
-    height:50px;
-    padding:15px 5px;
-    font-size:14px;
-    line-height:20px;
+.navbar-breadcrumb {
+    float: left;
+    height: 50px;
+    padding: 15px 5px;
+    font-size: 14px;
+    line-height: 20px;
 }
 
-.navbar-breadcrumb-sep{
-    font-size:18px;
+.navbar-breadcrumb-sep {
+    font-size: 18px;
     color: #fff;
 }
 
@@ -105,7 +117,7 @@ a:focus {
     color: #fff;
 }
 
-.navbar-custom .dropdown-menu>li>a {
+.navbar-custom .dropdown-menu > li > a {
     color: #fff;
 }
 
@@ -139,11 +151,11 @@ a:focus {
     color: #fff;
 }
 
-.navbar-custom span#navbar-brand-name{
+.navbar-custom span#navbar-brand-name {
     margin-left: 10px;
 }
 
-.navbar-custom span#navbar-brand-name-collapse{
+.navbar-custom span#navbar-brand-name-collapse {
     display: none;
     margin-left: 10px;
 }
@@ -154,7 +166,7 @@ a:focus {
     margin-top: -5px
 }
 
-.navbar-custom .open>a, .navbar-custom .open>a:focus, .navbar-custom .open>a:hover {
+.navbar-custom .open > a, .navbar-custom .open > a:focus, .navbar-custom .open > a:hover {
     background-color: #222;
 }
 
@@ -189,7 +201,7 @@ a:focus {
         color: #fff;
     }
 
-    .navbar-custom .dropdown-menu>li>a {
+    .navbar-custom .dropdown-menu > li > a {
         color: #fff;
     }
 
@@ -205,18 +217,18 @@ a:focus {
         color: #fff;
     }
 
-    .navbar-custom .open>a, .navbar-custom .open>a:focus, .navbar-custom .open>a:hover {
+    .navbar-custom .open > a, .navbar-custom .open > a:focus, .navbar-custom .open > a:hover {
         background-color: rgba(0, 0, 0, 0);
     }
 
-    .navbar-custom .navbar-nav>li, .navbar-custom .navbar-header {
+    .navbar-custom .navbar-nav > li, .navbar-custom .navbar-header {
         padding: 15px 0;
         -webkit-transition: padding .5s ease-in-out;
         -moz-transition: padding .5s ease-in-out;
         transition: padding .5s ease-in-out;
     }
 
-    .navbar-custom.top-nav-collapse .navbar-nav>li, .navbar-custom.top-nav-collapse .navbar-header {
+    .navbar-custom.top-nav-collapse .navbar-nav > li, .navbar-custom.top-nav-collapse .navbar-header {
         padding: 0;
     }
 
@@ -643,4 +655,14 @@ body {
 .ul_unstyled {
     list-style: none;
     padding: 0;
+}
+
+.belt_container {
+    padding: 10px;
+    padding-top: 20px;
+    text-align: left;
+    border: 1px rgb(221, 221, 221) solid;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+
 }
