--- a/css/coderdojoka.css
+++ b/css/coderdojoka.css
@@ -29,15 +29,15 @@ h6 {
     letter-spacing: 1px;
 }
 
-ul {
-    font-size: 16px;
-    line-height: 1.3;
+li {
+    font-size: 18px;
+    line-height: 1.5;
 }
 
 @media (min-width: 768px) {
-    ul {
-        font-size: 18px;
-        line-height: 1.4;
+    li {
+        font-size: 20px;
+        line-height: 1.6;
     }
 }
 
@@ -78,6 +78,10 @@ a:focus {
     text-transform: uppercase;
     font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
     background-color: #222;
+}
+
+.navbar-custom li {
+    font-size: 14px;
 }
 
 .navbar-custom .navbar-brand {
