Bilder eingefügt mit Lightbox Image Viewer.

--- a/css/coderdojoka.css
+++ b/css/coderdojoka.css
@@ -670,3 +670,19 @@ body {
     border-bottom-left-radius: 4px;
 
 }
+
+/* Um Bilder rechtsbündig anzuzeigen */
+
+.rechts_400 {
+    max-width: 400px;
+    float: none;
+    margin-left: 0;
+}
+
+@media (min-width: 768px) {
+
+    .rechts_400 {
+        float: right;
+        margin-left: 5px;
+    }
+}
