--- a/css/coderdojoka.css
+++ b/css/coderdojoka.css
@@ -676,13 +676,14 @@ body {
 .rechts_400 {
     max-width: 400px;
     float: none;
-    margin-left: 0;
+    margin: 0;
 }
 
 @media (min-width: 768px) {
 
     .rechts_400 {
         float: right;
-        margin-left: 5px;
+        margin-left: 8px;
+	margin-top: 8px;
     }
 }
