Website ueberarbeitet. Neue Sektion fuer Mentoren, den Anmeldprozess auf der Webseite deutlicher gemacht

--- a/css/coderdojoka.css
+++ b/css/coderdojoka.css
@@ -626,6 +626,11 @@ body {
     font-weight: bold;
 }
 
+#timeline .join_data {
+    color: #42dca3;
+    font-weight: bold;
+}
+
 .timeline-item a {
     color: #000;
     border-bottom: 1px dashed #42dca3;
