--- a/less/mat2.less
+++ b/less/mat2.less
@@ -1,14 +1,17 @@
 @author: Mark Weinreuter;
-
+@import "viewer_styles";
 @mb_hr: 16px;
 
-h1, h2, h3, h4, h5, h6{
+h1, h2, h3, h4, h5, h6 {
   text-align: left;
   margin-bottom: 4px;
-
 }
 
-h3{
+h2 {
+  margin-bottom: 30px;
+}
+
+h3 {
   margin-bottom: 20px;
 }
 
@@ -33,25 +36,51 @@ h3{
   }
 }
 
-#results {
-
-  list-style: none;
-  padding: 0;
-
+#search_results {
   > ul {
-    padding: 0;
+    list-style: none;
+
+    li {
+      text-align: left;
+    }
   }
+}
+
+#materials {
 
   * {
     text-align: left;
   }
 
+  > ul {
+    padding: 0;
+
+    > li {
+      margin-bottom: 60px;
+    }
+  }
+
   ul {
     list-style: none;
+    padding-left: 12px;
   }
 
   hr {
     margin: 5px 0 @mb_hr 0;
+  }
+
+  h2 {
+    border-bottom: 1px solid #ffb400;
+    margin-top: 50px;
+  }
+
+  h3 {
+    margin-top: 20px;
+    border-bottom: 1px solid #66b8a0;
+  }
+
+  h4, h5, h6 {
+    margin-top: 2px;
   }
 }
 
