--- a/mat2.css
+++ b/mat2.css
@@ -1,3 +1,52 @@
+#viewer img {
+  max-width: 60%;
+  height: auto;
+  margin: 10px auto;
+  display: block;
+}
+#viewer .column_container :after {
+  clear: both;
+  height: 0;
+  visibility: hidden;
+  content: "";
+}
+#viewer .column_container .column {
+  float: left;
+}
+#viewer p {
+  margin-bottom: 5px;
+}
+#viewer pre {
+  border-left: 4px solid cornflowerblue;
+  background-color: #f3f3f3;
+  padding-left: 25px;
+}
+#viewer h1 {
+  text-align: center;
+  margin-bottom: 50px;
+}
+#viewer h2 {
+  border-bottom: 1px solid #ffb400;
+  margin-top: 50px;
+}
+#viewer h3 {
+  margin-top: 20px;
+  border-bottom: 1px solid #66b8a0;
+}
+#viewer h4 {
+  margin-top: 20px;
+  border-bottom: 1px solid darkred;
+}
+#viewer .content_section {
+  font-size: 13pt;
+  margin-left: 40px;
+  margin-bottom: 30px;
+}
+#viewer .content_sub_section {
+  font-size: 13pt;
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
 h1,
 h2,
 h3,
@@ -6,6 +55,9 @@ h5,
 h6 {
   text-align: left;
   margin-bottom: 4px;
+}
+h2 {
+  margin-bottom: 30px;
 }
 h3 {
   margin-bottom: 20px;
@@ -25,21 +77,40 @@ h3 {
 #viewer code {
   font-size: 14pt;
 }
-#results {
+#search_results > ul {
   list-style: none;
-  padding: 0;
 }
-#results > ul {
-  padding: 0;
-}
-#results * {
+#search_results > ul li {
   text-align: left;
 }
-#results ul {
-  list-style: none;
+#materials * {
+  text-align: left;
 }
-#results hr {
+#materials > ul {
+  padding: 0;
+}
+#materials > ul > li {
+  margin-bottom: 60px;
+}
+#materials ul {
+  list-style: none;
+  padding-left: 12px;
+}
+#materials hr {
   margin: 5px 0 16px 0;
+}
+#materials h2 {
+  border-bottom: 1px solid #ffb400;
+  margin-top: 50px;
+}
+#materials h3 {
+  margin-top: 20px;
+  border-bottom: 1px solid #66b8a0;
+}
+#materials h4,
+#materials h5,
+#materials h6 {
+  margin-top: 2px;
 }
 .e_res {
   background-color: #fafafa;
