--- a/less/material_viewer.less
+++ b/less/material_viewer.less
@@ -7,13 +7,10 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 4px;
 }
 
-h2 {
-  margin-bottom: 30px;
+#chooser{
+  margin-top: 20px;
 }
 
-h3 {
-  margin-bottom: 20px;
-}
 
 #search {
   input {
@@ -23,17 +20,7 @@ h3 {
     width: 100%;
   }
 
-  margin-bottom: 50px;
-}
-
-#viewer {
-  text-align: left;
-
-  #btn_back {
-  }
-  code {
-    font-size: 14pt;
-  }
+  margin-bottom: 35px;
 }
 
 #search_results {
@@ -56,13 +43,13 @@ h3 {
     padding: 0;
 
     > li {
-      margin-bottom: 60px;
+      margin-bottom: 45px;
     }
   }
 
   ul {
     list-style: none;
-    padding-left: 12px;
+    padding-left: 5px;
   }
 
   hr {
@@ -70,13 +57,15 @@ h3 {
   }
 
   h2 {
-    border-bottom: 1px solid #ffb400;
-    margin-top: 50px;
+    font-size: 16pt;
+    margin: 24px 0;
+    border-bottom: 1px solid #66b8a0;
   }
 
   h3 {
-    margin-top: 20px;
-    border-bottom: 1px solid #66b8a0;
+    margin: 12px 0;
+    font-size: 14pt;
+    border-bottom: 1px solid #ffb400;
   }
 
   h4, h5, h6 {
@@ -87,10 +76,11 @@ h3 {
 .e_res {
   background-color: #fafafa;
   padding: 5px;
-  margin-bottom: 5px;
+  margin-bottom: 2px;
 
   &:hover {
     background-color: #f0f0f0;
+    cursor: pointer;
   }
 }
 
