--- a/less/viewer_styles.less
+++ b/less/viewer_styles.less
@@ -11,7 +11,12 @@
 #viewer {
   text-align: left;
 
+  #btn_back{
+    margin-bottom: 15px;
+  }
+
   * {
+    text-align: left;
     font-size: @fs_content;
   }
 
@@ -49,8 +54,7 @@
   }
 
   h1 {
-    text-align: center;
-    margin-bottom: 50px;
+    margin: 25px 0;
     font-size: 1.8em;
   }
 
