--- a/css/coderdojoka.css
+++ b/css/coderdojoka.css
@@ -467,6 +467,10 @@ footer p {
     background: rgba(255, 255, 255, .2);
 }
 
+img{
+max-width: 100%;
+}
+
 img::selection {
     background: 0 0;
 }
