--- a/css/coderdojoka.css
+++ b/css/coderdojoka.css
@@ -448,7 +448,10 @@ ul.banner-social-buttons {
 }
 
 footer {
-    padding: 50px 0;
+	margin-top: 5em;
+    padding: 2.5em 0;
+    background-color: rgb(34, 34, 34);
+    color: white;
 }
 
 footer p {
